--- a/peepoquest/basic.css
+++ b/peepoquest/basic.css
@@ -1,7 +1,7 @@
 body {
-	background: #000000 url("assets/bg_omori.png") repeat left top;
-	color: white;
-	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	background: #ff5151 url("assets/bg_sweet.png") repeat left top;
+	color: rgb(51, 0, 0);
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 16px;
 	margin-left: 0;
 }
@@ -67,19 +67,19 @@ a {
 }
 
 a:link {
-	color: lightskyblue;
+	color: rgb(124, 13, 13);
 }
 
 a:visited {
-	color: purple;
+	color: rgb(190, 21, 21);
 }
 
 a:hover {
-	color: dodgerblue;
+	color: rgb(235, 18, 18);
 }
 
 a:active {
-	color: blue;
+	color: rgb(78, 3, 3);
 }
 
 ul.navBar {
@@ -87,7 +87,7 @@ ul.navBar {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #000;
+	background-color: #ffbb3e;
 	position: fixed;	
 	top: 0;
 	width: 100%;
@@ -103,7 +103,7 @@ ul.navBar li {
 
 ul.navBar li a {
 	display: block;
-	color: white;
+	color: rgb(61, 40, 0);
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
@@ -112,16 +112,16 @@ ul.navBar li a {
 }
 
 ul.navBar li a:hover {
-	background-color: rgba(255,255,255,.25);
+	background-color: rgba(255, 225, 57, 0.25);
 }
 
 ul.navBar li a:active {
-	background-color: rgba(255,255,255,.5);
+	background-color: rgba(255, 253, 159, 0.5);
 }
 
 ul.navBar li a.current {
 	background-color: #fff;
-	color: blue;
+	color: rgb(114, 86, 9);
 }
 
 :target::before {
@@ -134,7 +134,7 @@ ul.navBar li a.current {
 .dropdown-content {
 	display: none;
 	position: fixed;
-	background-color: #000;
+	background-color: #684c00;
 	min-width: 160px;
 	z-index: 1;
 }
