--- a/peepoquest/sweet.css
+++ b/peepoquest/sweet.css
@@ -116,7 +116,7 @@ ul.navBar li a.current {
 .dropdown-content {
 	display: none;
 	position: fixed;
-	background-color: #684c00;
+	background-color: #8a5300;
 	min-width: 160px;
 	z-index: 1;
 }
