--- a/peepoquest/sour.css
+++ b/peepoquest/sour.css
@@ -1,6 +1,6 @@
 body {
-	background: #ff5151 url("assets/bg_sweet.png") repeat left top;
-	color: rgb(112, 0, 0);
+	background: #fff351 url("assets/bg_sour.png") repeat left top;
+	color: rgb(112, 91, 0);
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 16px;
 	margin-left: 0;
@@ -49,19 +49,19 @@ a {
 }
 
 a:link {
-	color: rgb(124, 13, 13);
+	color: rgb(122, 124, 13);
 }
 
 a:visited {
-	color: rgb(190, 21, 21);
+	color: rgb(190, 173, 21);
 }
 
 a:hover {
-	color: rgb(235, 18, 18);
+	color: rgb(235, 221, 18);
 }
 
 a:active {
-	color: rgb(78, 3, 3);
+	color: rgb(78, 71, 3);
 }
 
 ul.navBar {
