--- a/peepoquest/sweet.css
+++ b/peepoquest/sweet.css
@@ -1,5 +1,5 @@
 body {
-	background: #ff5151 url("assets/bg_sweet.png") repeat left top;
+	background: #ff5151 url("assets/bg_sweets.png") repeat left top;
 	color: rgb(112, 0, 0);
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 16px;
